--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">Literaku</string>
 
-    <string name="bantuan">Gunakan perintah-perintah berikut:</string>
-    <string name="bantuanHome1">“Cari (kata kunci)” untuk mencari di Internet.</string>
-    <string name="bantuanHome2">“Sambung bacaan terakhir” untuk menyambung riwayat bacaan.</string>
-    <string name="bantuanHome3">“Membuka Koleksi” untuk menemukan bacaan di koleksi yang tersedia.</string>
-    <string name="bantuanHome4">“Cara Pakai ReadMe” untuk memulai mempelajari fitur-fitur yang tersedia.</string>
-    <string name="bantuanHome5">“Buka Bantuan” untuk membantu kamu perintah yang tersedia.</string>
+    <string name="bantuanHome0">Anda sedang berada di halaman utama. Gunakan perintah-perintah berikut:</string>
+    <string name="bantuanHome1">“Buka Penjelajah” untuk mencari judul bacaan di Internet.</string>
+    <string name="bantuanHome2">“Buka Koleksi” untuk menemukan daftar bacaan di koleksi yang tersedia.</string>
+    <string name="bantuanHome3">“Buka Riwayat” untuk menyambung riwayat bacaan.</string>
+    <string name="bantuanHome4">“Buka Panduan” untuk memulai mempelajari fitur-fitur yang tersedia.</string>
+    <string name="bantuanHome5">“Buka Bantuan” untuk membantu kamu mengetahui perintah yang tersedia.</string>
+    <string name="bantuanHome6">“Keluar” untuk keluar dari aplikasi Literaku.</string>
 
     <string name="appwidget_text">Literaku Widget</string>
     <string name="configure">Configure</string>
