--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,12 @@
     <string name="bantuanPengaturan3">“Kembali” untuk kembali ke halaman sebelumnya.</string>
     <string name="bantuanPengaturan4">“Keluar” untuk keluar dari aplikasi Literaku.</string>
 
+    <string name="bantuanRiwayat0">Anda sedang berada di halaman Riwayat. Gunakan perintah-perintah berikut:</string>
+    <string name="bantuanRiwayat1">“Buka” lalu sebutkan judul bacaan yang ada dari hasil pencarian. Saat memasuki halaman bacaan, mengaktifkan perintah suara dapat dilakukan dengan mengetuk sekali layar.</string>
+    <string name="bantuanRiwayat2">“Baca ulang daftar bacaan” untuk mengetahui ulang daftar bacaan yang tersedia.</string>
+    <string name="bantuanRiwayat3">“Kembali” untuk kembali ke halaman sebelumnya.</string>
+    <string name="bantuanRiwayat4">“Keluar” untuk keluar dari aplikasi Literaku.</string>
+
     <string name="appwidget_text">Literaku Widget</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
