--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,5 @@
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
 
-    <string name="shortcut_short_insert_label">Main</string>
+    <string name="shortcut_short_insert_label">Ya</string>
 </resources>
